# github-data-sync-service

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 202607170001_create_foundation_tables.py  202607170002_add_issue_sync.py  202607170003_add_incremental_issue_sync.py
src/github_data_sync_service/: __init__.py
src/github_data_sync_service/api/: app.py  dependencies.py  error_handlers.py
src/github_data_sync_service/api/routes/: health.py  issues.py  repositories.py  sync_jobs.py
src/github_data_sync_service/api/schemas/: issues.py  repositories.py  sync_jobs.py
src/github_data_sync_service/core/: config.py  errors.py  logging.py
src/github_data_sync_service/db/: session.py
src/github_data_sync_service/github/: client.py  errors.py  models.py  pagination.py
src/github_data_sync_service/issues/: __init__.py  repository.py  service.py
src/github_data_sync_service/queue/: repository.py  service.py
src/github_data_sync_service/repositories/: repository.py  service.py
src/github_data_sync_service/worker/: main.py  processor.py
tests/: conftest.py
tests/integration/: test_postgres_foundation.py
tests/live/: test_github_live.py
tests/unit/: test_config_logging_api.py  test_dependencies_health_logging_worker.py  test_github_client.py  test_repository_and_queue_units.py  test_service_mapping.py  test_version.py  test_worker_processor.py
(+5 files in other folders)
