[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-data-sync-service"
version = "0.1.0"
description = "Backend foundation for GitHub repository metadata synchronization."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.111",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
github-data-sync-worker = "github_data_sync_service.worker.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require PostgreSQL",
    "live: tests that call the live GitHub API",
]
addopts = "-ra --strict-markers"
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["github_data_sync_service"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["respx.*"]
ignore_missing_imports = true
